enforce node 18 and pnpm so Vercel doesn't try to yarn a preview deployment on v20 again

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "turbo": "^1.13.2"
   },
   "engines": {
-    "node": "18"
+    "node": "^18.20.0"
   },
+  "packageManager": "pnpm@9.6.0",
   "peerDependencies": {
     "utf-8-validate": "^5.0.2"
   }
