--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -16,8 +16,9 @@
     "build-storybook": "storybook build"
   },
   "engines": {
-    "node": "18"
+    "node": "^18.20.0"
   },
+  "packageManager": "pnpm@9.6.0",
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/icons": "^2.1.1",
@@ -56,7 +57,6 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@graphprotocol/client-cli": "^3.0.1",
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript": "^2.7.3",
@@ -66,7 +66,7 @@
     "@testing-library/react": "^15.0.2",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
-    "@types/node": "22.3.0",
+    "@types/node": "18.0.6",
     "@types/react": "18.2.79",
     "@wagmi/cli": "^1.3.0",
     "eslint": "8.40.0",
